# bench-ARK

./: .gitignore  cellpose.md  pyproject.toml
configs/: careamics_asustest04.yaml  cellpose_asustest04.yaml  n2n_asustest04.yaml  n2v_asustest04.yaml  pyclesperanto_asustest04.yaml  stardist_asustest04.yaml  test_config.yaml
src/bench_ark/: __init__.py
src/bench_ark/benchmarks/: __init__.py  base.py  cellpose_artificial_inference.py  cellpose_training.py  pyclesperanto_base.py  pyclesperanto_example.py  pytorch_base.py  stardist_artificial_segmentation.py  tensorflow_base.py  test_benchmark.py
src/bench_ark/cli/: main.py
src/bench_ark/core/: __init__.py  benchmark_manager.py  device_manager.py  image_generator.py  visualizations.py
tests/: __init__.py
